# msc-thesis

./: .gitignore  README.md
code/ntk-experiments/: .pylintrc  AGENTS.md  pyproject.toml
code/ntk-experiments/configs/: ntk_beta_dispersion.yaml  ntk_kernel_drift.yaml  ntk_kernel_drift_10000_more_steps.yaml  ntk_kernel_drift_large_widths.yaml  ntk_profile.yaml  ntk_profile_beta_sweep.yaml  ntk_profile_beta_sweep_standard_parameterization.yaml  ntk_regression_complex.yaml  ntk_regression_fourier_complex_longer_time.yaml  ntk_regression_fourier_low_width_high_lr.yaml  ntk_regression_simple.yaml  ntk_spectrum_drift.yaml
code/ntk-experiments/core/: analysis.py  data.py  experiment_utils.py  kernel_circle.py  model.py  train.py
code/ntk-experiments/experiments/: ntk_beta_dispersion.py  ntk_kernel_drift.py  ntk_profile_beta_sweep.py  ntk_profile_convergence.py  ntk_regression_convergence.py  ntk_spectrum_drift.py
code/ntk-experiments/notebooks/: ntk-experiments.ipynb  ntk-spectrum.ipynb  utils_plotting.py
code/ntk-experiments/results/ntk_profile_convergence/: latest
code/ntk-experiments/results/ntk_profile_convergence/20251031-124925-eefffdab/: analytic_profile.npz  manifest.json  profiles_width_100.npz  run_info.json  (+1 more)
code/ntk-experiments/results/ntk_regression_fourier_complex/: latest
code/ntk-experiments/results/ntk_regression_fourier_low_width_high_lr/: latest
code/ntk-experiments/results/ntk_regression_simple/: latest
code/ntk-experiments/tests/: test_kernel_circle.py  test_kernel_circle_nt.py
code/ntk-experiments/utils/: artifacts.py  artifacts_io.py
(+115 files in other folders)
